# NKGGameFramework

./: .gitignore  .gitmodules  AGENTS.md  Directory.Build.props  NKGGameFramework.sln  README.md
docs/: architecture.md  debug-and-dump.md  debug-dump-implementation-plan.md  godot-leanclr-generic-host-binding-plan.md  godot-leanclr-runtime-structure.md  leanclr-godot-integration-plan.md  reference-analysis.md
eng/: verify-engine-independence.ps1
samples/GodotPlaneSample/: README.md  project.godot  run-godot-plane.ps1
samples/GodotPlaneSample/native/: CMakeLists.txt  build-gdextension.ps1
samples/GodotPlaneSample/native/src/: nkg_debug_http_server.cpp  nkg_debug_http_server.h  nkg_godot_debug_transport.h  nkg_leanclr_plane_bridge.cpp  nkg_leanclr_plane_bridge.h  nkg_leanclr_plane_host.cpp  nkg_leanclr_plane_host.h  nkg_leanclr_runtime_bridge.cpp  nkg_leanclr_runtime_bridge.h  register_types.cpp  register_types.h
samples/NKGGameFramework.GodotPlaneSample/: NKGGameFramework.GodotPlaneSample.csproj  PlaneGame.cs  PlaneGameBridge.cs  PlaneGameComponents.cs  PlaneGameRules.cs  PlaneGameSystems.cs
samples/NKGGameFramework.Sampler/: BattleSystems.cs  Program.cs  SampleGame.cs  SampleModels.cs  SampleProcedures.cs
samples/NKGGameFramework.SkillSystemSampler/: NKGGameFramework.SkillSystemSampler.csproj  Program.cs  SampleActions.cs  SampleCombat.cs  SampleComponents.cs  SampleConstants.cs  SampleDefinitions.cs  SampleLog.cs  SampleRegistries.cs  SkillSystemSample.cs
src/NKGGameFramework.Adapter.Godot/: GodotAdapterContracts.cs  GodotColor.cs  GodotDebugEndpointBridge.cs  GodotHostCommandBuffer.cs  GodotHostCommands.cs  GodotNode.cs  GodotObjectId.cs  GodotResourceId.cs  GodotVariant.cs  GodotVector2.cs  NKGGameFramework.Adapter.Godot.csproj
src/NKGGameFramework.Adapter.Unity/: NKGGameFramework.Adapter.Unity.csproj  UnityAdapterContracts.cs
src/NKGGameFramework.Diagnostics/: DebugSnapshotTypeNames.cs  GameDebugComponentStoreBlockSerializer.cs  GameDebugComponentValueMaterializer.cs  GameDebugDumpAnalysisReport.cs  GameDebugDumpBinaryCodec.cs  GameDebugDumpFile.cs  GameDebugDumpModels.cs  GameDebugDumpRecorder.cs  GameDebugEndpointDispatcher.cs  GameDebugEndpointLeanJson.cs  GameDebugEndpointModels.cs  GameDebugEndpointTextBridge.cs  GameDebugFrameCapturePipeline.cs  GameDebugJson.cs  GameDebugMutationHandler.cs  GameDebugMutationModels.cs  GameDebugOdinSerialization.cs  GameDebugOdinSerializationPolicy.cs  GameDebugOptions.cs  GameDebugSession.cs  GameDebugSnapshotModels.cs  GameDebugSnapshotProvider.cs  GameDebugSnapshotTypeForwarders.cs  GameDebugStructuredComponentValue.cs  IGameDebugComponentValueSerializer.cs  IGameDebugMutationHandler.cs  (+3 more)
(+199 files in other folders)
